--- a/common/.project
+++ b/common/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>XQBase Metric Aggregator</name>
+	<name>XQBase Metric Common</name>
 	<comment></comment>
 	<projects>
 	</projects>
