--- a/client/pom.xml
+++ b/client/pom.xml
@@ -16,7 +16,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.xqbase</groupId>
-			<artifactId>xqbase-metric-aggregator</artifactId>
+			<artifactId>xqbase-metric-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
