--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -43,6 +43,12 @@
 			<groupId>com.xqbase</groupId>
 			<artifactId>xqbase-util</artifactId>
 			<version>0.2.0</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>javax.mail</artifactId>
+					<groupId>com.sun.mail</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.mongodb</groupId>
