--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -51,6 +51,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>com.xqbase</groupId>
+			<artifactId>xqbase-metric-common</artifactId>
+			<version>0.2.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.12.3</version>
