tags_expire, time bugfix

--- a/collector/pom.xml
+++ b/collector/pom.xml
@@ -43,6 +43,7 @@
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
+					<finalName>metric-collector</finalName>
 					<appendAssemblyId>false</appendAssemblyId>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
