--- a/collector/src/main/resources/Collector.properties
+++ b/collector/src/main/resources/Collector.properties
@@ -7,3 +7,8 @@ quarter_delay=2
 remote_addr=on
 #allowed_remote=
 #verbose=on
+max_tags=16
+max_tag_values=256
+max_metric_len=64
+max_tag_key_len=64
+max_tag_value_len=64
