--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.xqbase</groupId>
 	<artifactId>xqbase-metric-dashboard</artifactId>
-	<version>0.2.4</version>
+	<version>0.2.5</version>
 	<packaging>war</packaging>
 	<name>XQBase Metric Dashboard</name>
 	<description>a lightweight metric framework for aggregating, collecting and showing metric data - dashboard part</description>
@@ -39,6 +39,23 @@
 	</properties>
 
 	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<compilerId>eclipse</compilerId>
+					<optimize>true</optimize>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.plexus</groupId>
+						<artifactId>plexus-compiler-eclipse</artifactId>
+						<version>2.5</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
 		<finalName>dashboard</finalName>
 	</build>
 
@@ -46,7 +63,7 @@
 		<dependency>
 			<groupId>com.xqbase</groupId>
 			<artifactId>xqbase-util</artifactId>
-			<version>0.2.6</version>
+			<version>0.2.7</version>
 		</dependency>
 		<dependency>
 			<groupId>com.xqbase</groupId>
@@ -56,7 +73,7 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
-			<version>2.13.0</version>
+			<version>2.13.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
