--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -39,23 +39,6 @@
 	</properties>
 
 	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<compilerId>eclipse</compilerId>
-					<optimize>true</optimize>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.codehaus.plexus</groupId>
-						<artifactId>plexus-compiler-eclipse</artifactId>
-						<version>2.5</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-		</plugins>
 		<finalName>dashboard</finalName>
 	</build>
 
@@ -68,7 +51,12 @@
 		<dependency>
 			<groupId>com.xqbase</groupId>
 			<artifactId>xqbase-metric-common</artifactId>
-			<version>0.2.4</version>
+			<version>0.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.xqbase</groupId>
+			<artifactId>xqbase-metric-util</artifactId>
+			<version>0.2.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mongodb</groupId>
