--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,13 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Eclipse Files #
 .settings
+.project
+.classpath
+
+# Maven Files #
 /client/target
 /client-jdk17/target
 /collector/target
