continue with sleepycat

--- a/integrated-sleepycat/pom.xml
+++ b/integrated-sleepycat/pom.xml
@@ -50,7 +50,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.xqbase</groupId>
-			<artifactId>xqbase-metric-common</artifactId>
+			<artifactId>xqbase-metric-client</artifactId>
 			<version>0.2.5</version>
 		</dependency>
 		<dependency>
