--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 /common-jdk17/target
 /dashboard/target
 /integrated-sleepycat/target
+/integrated-sleepycat/src/main/webapp/WEB-INF/data
+/integrated-sleepycat/src/main/webapp/WEB-INF/logs
