--- a/collector/src/main/resources/Collector.properties
+++ b/collector/src/main/resources/Collector.properties
@@ -11,5 +11,5 @@ max_tags=16
 max_tag_values=256
 max_tag_combinations=65536
 max_metric_len=64
-max_tag_key_len=64
+max_tag_name_len=64
 max_tag_value_len=64
