--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -66,15 +66,22 @@
 
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-catalina</artifactId>
-			<version>8.0.21</version>
+			<artifactId>tomcat-servlet-api</artifactId>
+			<version>8.0.30</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-catalina</artifactId>
+			<version>8.0.30</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-coyote</artifactId>
-			<version>8.0.21</version>
-			<scope>provided</scope>
+			<version>8.0.30</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
