--- a/collector-sql/src/main/resources/jdbc.properties
+++ b/collector-sql/src/main/resources/jdbc.properties
@@ -1,4 +1,6 @@
-driver=com.mysql.jdbc.NonRegisteringDriver
-url=jdbc:mysql://localhost/test
+#driver=com.mysql.jdbc.NonRegisteringDriver
+#url=jdbc:mysql://localhost/test
+driver=com.xqbase.metric.util.P6Factory$Driver
+url=jdbc:p6spy:mysql://localhost/test
 user=root
 password=****
