--- a/client-jdk17/pom.xml
+++ b/client-jdk17/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.xqbase</groupId>
 	<artifactId>xqbase-metric-client-jdk17</artifactId>
-	<version>0.2.8</version>
+	<version>0.2.9-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>XQBase Metric Client</name>
 	<description>a lightweight metric framework for aggregating, collecting and showing metric data - client part</description>
