use interfaces instead of classes

--- a/dashboard-sql/pom.xml
+++ b/dashboard-sql/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.xqbase</groupId>
 	<artifactId>xqbase-metric-dashboard</artifactId>
-	<version>0.2.8</version>
+	<version>0.2.10-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>XQBase Metric Dashboard</name>
 	<description>a lightweight metric framework for aggregating, collecting and showing metric data - dashboard part</description>
@@ -46,12 +46,12 @@
 		<dependency>
 			<groupId>com.xqbase</groupId>
 			<artifactId>xqbase-util</artifactId>
-			<version>0.2.10</version>
+			<version>0.2.12-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.xqbase</groupId>
 			<artifactId>xqbase-metric-common</artifactId>
-			<version>0.2.8</version>
+			<version>0.2.10-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
