--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>com.xqbase</groupId>
 			<artifactId>xqbase-util</artifactId>
-			<version>0.2.12-SNAPSHOT</version>
+			<version>0.2.11</version>
 		</dependency>
 		<dependency>
 			<groupId>com.xqbase</groupId>
