--- a/collector-sql/pom.xml
+++ b/collector-sql/pom.xml
@@ -70,7 +70,7 @@
 		<dependency>
 			<groupId>com.xqbase</groupId>
 			<artifactId>xqbase-util</artifactId>
-			<version>0.2.12</version>
+			<version>0.2.15-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.xqbase</groupId>
