--- a/dashboard-sql/pom.xml
+++ b/dashboard-sql/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>com.xqbase</groupId>
 			<artifactId>xqbase-util</artifactId>
-			<version>0.2.15-SNAPSHOT</version>
+			<version>0.2.15</version>
 		</dependency>
 		<dependency>
 			<groupId>com.xqbase</groupId>
